<resources>
    <string name="app_name">Art Vancouver</string>
    <string name="json_file_name">public-art.json</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="account">No account yet?</string>
    <string name="accountPrompt"><u>Create One</u></string>
    <string name="photoCred">Photo Credits:</string>
    <string name="address">Address: </string>
    <string name="owner">Owner: </string>
    <string name="neighbourhoodDesc">Neighbourhood: </string>
    <string name="description">Description: </string>
    <string name="backBtn">Back</string>
    <string name="title_activity_maps">Map</string>
    <string name="zoomIn">+</string>
    <string name="zoomOut">-</string>
    <string name="current_location">Current Location</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="neighbourhood">Neighbourhood</string>
    <string name="installation_year">Installation Year</string>
    <string name="ownership">Ownership</string>
    <string name="searchButton">Search</string>
    <string name="discussArt">Discuss Art</string>
    <string name="findArt">Find Art</string>
    <string name="logOut">Log Out</string>
    <string name="noPhotoCredits">Unknown Photographer</string>
    <string name="noOwner">Unknown Owner</string>
    <string name="noStreetAddress">Exact Address Unknown</string>
    <string name="noNeighbourhood">Neighbourhood Unknown</string>
    <string name="noDescription">Description Not Provided</string>
    <string name="addArt">Add Art</string>
    <string name="forums">Forums</string>
    <string name="sampleArt">Sample Art</string>
</resources>
