<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/discussButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDiscussArt"
            android:text="@string/discussArt" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onFindArt"
            android:text="@string/findArt" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onLogOut"
            android:text="@string/logOut" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>