<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/appTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/usernameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/usernameEnterEDT"
                    android:text="@string/username"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/usernameEnterEDT"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:textAlignment="textStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/passwordTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/passwordEDT"
                    android:text="@string/password"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/passwordEDT"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:onClick="onClickLogin"
                android:text="@string/login" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>